# obelisk-websockets

./: README.md  default.nix
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/WebSocketHandler/: WsHandler.hs
common/: common.cabal
common/src/: Prelude.hs
common/src/Common/: Api.hs  Message.hs
devel/: Devel.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs  FrontendCommon.hs
