name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base-noprelude
               , common
               , frontend
               , obelisk-asset-serve-snap
               , obelisk-snap
               , snap
               , snap-server
               , websockets-snap
               , reflex-websocket-interface-server
               , reflex-websocket-interface-shared
  exposed-modules:
    Backend
    WebSocketHandler.WsHandler
  ghc-options: -Wall
  default-extensions: OverloadedStrings

executable backend
  main-is: main.hs
  hs-source-dirs: app
  default-extensions: OverloadedStrings
  if impl(ghcjs)
    buildable: False
  build-depends: base-noprelude
               , backend
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , text
