name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base-noprelude
               , protolude
               , reflex-websocket-interface-shared

  default-extensions: OverloadedStrings
  exposed-modules:
    Prelude
    Common.Api
    Common.Message
