name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base-noprelude
               , common
               , reflex-dom
               , static
               , text
               , reflex-websocket-interface
               , reflex-websocket-interface-shared
  exposed-modules:
    Frontend
  ghc-options: -Wall
  default-extensions: OverloadedStrings

executable frontend
  main-is: main.hs
  hs-source-dirs: app
  build-depends: base-noprelude
               , common
               , reflex-dom
               , static
               , text
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  default-extensions: OverloadedStrings
  if os(darwin)
     ghc-options: -dynamic
